--- a/webapps/j2ee/WEB-INF/web.xml
+++ b/webapps/j2ee/WEB-INF/web.xml
@@ -11,6 +11,7 @@
             <param-name>site</param-name>
             <param-value>(cs)servlet</param-value>
         </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
